<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".Activity2">

    <TextView
        android:id="@+id/activity2_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity2_welcome_register_text"
        android:textColor="@color/colorTextBlack"
        android:textSize="24sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <EditText
        android:id="@+id/editText_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/activity2_Name_text"
        android:inputType="textPersonName"
        android:textAllCaps="false"
        android:textColorHint="@color/colorTextBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity2_textview"
        app:layout_constraintVertical_bias="0.04000002" />

    <EditText
        android:id="@+id/editText_apellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/activity2_Surname_text"
        android:inputType="textPersonName"
        android:textAllCaps="false"
        android:textColorHint="@color/colorTextBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_nombre"
        app:layout_constraintVertical_bias="0.04000002" />

    <EditText
        android:id="@+id/editText_Usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/activity2_user_text"
        android:inputType="textPersonName"
        android:textAllCaps="false"
        android:textColorHint="@color/colorTextBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_apellido"
        app:layout_constraintVertical_bias="0.060000002" />

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/activity2_password_text"
        android:inputType="textPassword"
        android:textAllCaps="false"
        android:textColorHint="@color/colorTextBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Usuario"
        app:layout_constraintVertical_bias="0.060000002" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/activity2_email_text"
        android:inputType="textPersonName"
        android:textAllCaps="false"
        android:textColorHint="@color/colorTextBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Password"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/activity2_boton_registro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_rounded"
        android:text="@string/activity2_register_button"
        android:textColor="@color/colorTextWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

</androidx.constraintlayout.widget.ConstraintLayout>